--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-a2s==1.0.1
 aiofiles==24.1.0
 aiogram==3.15.0
 aiohappyeyeballs==2.4.3
@@ -7,18 +6,24 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
+docopt==0.6.2
 environs==11.2.0
 frozenlist==1.5.0
 idna==3.10
 magic-filter==1.0.12
 marshmallow==3.23.1
+monotonic==1.6
 multidict==6.1.0
 packaging==24.2
 propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
-python-a2s==1.4.1
 python-dotenv==1.0.1
+python-valve==0.2.1
+requests==2.32.3
+six==1.16.0
 tqdm==4.67.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 yarl==1.17.2
