--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+a2s==1.0.1
 aiofiles==24.1.0
 aiogram==3.15.0
 aiohappyeyeballs==2.4.3
@@ -19,6 +20,7 @@ packaging==24.2
 propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-a2s==1.4.1
 python-dotenv==1.0.1
 python-valve==0.2.1
 requests==2.32.3
