--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 attrs==24.2.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 environs==11.2.0
 frozenlist==1.5.0
 idna==3.10
@@ -18,6 +19,8 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 python-a2s==1.4.1
 python-dotenv==1.0.1
+requests==2.32.3
 tqdm==4.67.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 yarl==1.17.2
